--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -3,17 +3,29 @@
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows</TargetFramework>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <UseWPF>true</UseWPF>
+        <ApplicationIcon>f1.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="AdonisUI" Version="1.17.1" />
       <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
+      <PackageReference Include="FluentScheduler" Version="5.5.1" />
       <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
       <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
       <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
       <PackageReference Include="Stylet" Version="1.3.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="f1.ico" />
+      <Resource Include="f1.ico" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controls" />
+      <Folder Include="Converters" />
     </ItemGroup>
 
 </Project>
