--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -12,7 +12,7 @@
       <PackageReference Include="AdonisUI" Version="1.17.1" />
       <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
       <PackageReference Include="FluentScheduler" Version="5.5.1" />
-      <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
+      <PackageReference Include="H.NotifyIcon.Wpf" Version="2.0.58" />
       <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
       <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
       <PackageReference Include="Stylet" Version="1.3.6" />
