--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -21,6 +21,8 @@
       <PackageReference Include="H.NotifyIcon.Wpf" Version="2.0.58" />
       <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
       <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
+      <PackageReference Include="Serilog" Version="2.12.0-dev-01494" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
       <PackageReference Include="Stylet" Version="1.3.6" />
       <PackageReference Include="System.ServiceModel.Syndication" Version="7.0.0-preview.6.22324.4" />
     </ItemGroup>
