--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -17,9 +17,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         
     # Install the .NET Core workload
     - name: Install .NET Core
@@ -40,7 +37,7 @@ jobs:
       run: csq github-down -r ./bin/Squirrel --repoUrl https://github.com/sirdoombox/F1Desktop
         
     - name: Squirrel Release
-      run: csq pack -u F1Desktop -v ${{ env.RELEASE_VERSION }} -p ./bin/Publish -r ./bin/Squirrel -e F1Desktop.exe -i ./Resources/f1.ico
+      run: csq pack -u F1Desktop -v ${{github.ref_name}} -p ./bin/Publish -r ./bin/Squirrel -e F1Desktop.exe -i ./Resources/f1.ico
       
     - name: Trim RELEASES
       run: |
