--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -42,33 +42,40 @@ jobs:
       run: (Get-Content bin/Squirrel/RELEASES | Select-Object -Skip 1) | Set-Content bin/Squirrel/RELEASES
 
     - name: Create Release
-    id: create_release
-    uses: actions/create-release@v1
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    with:
-      tag_name: ${{ github.ref }}
-      release_name: F1 Desktop v${{ github.ref }}
-      draft: true
-      prerelease: false
-  
-  publish:
-    needs: build
-    strategy:
-      matrix:
-        artifact_name: [F1Desktop-${{github.ref_name}}-full.nupkg, F1Desktop-${{github.ref_name}}-delta.nupkg, F1DesktopSetup.exe, RELEASES]
-
-  - name: Upload binaries to release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: F1 Desktop v${{ github.ref }}
+        draft: true
+        prerelease: false
+        
+    - name: Upload Full Patch
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: target/release/${{ matrix.artifact_name }}
-        asset_name: ${{ matrix.asset_name }}
+        file: bin/Squirrel/F1Desktop-${{github.ref_name}}-full.nupkg
         tag: ${{ github.ref }}
 
-    - name: Upload Squirrel Build
+    - name: Upload Delta Patch
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: bin/Squirrel/${{matrix.artifact_name}}
+        file: bin/Squirrel/F1Desktop-${{github.ref_name}}-delta.nupkg
+        tag: ${{ github.ref }}
+
+    - name: Upload Installer
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: bin/Squirrel/F1DesktopSetup.exe
+        tag: ${{ github.ref }}
+
+    - name: Upload RELEASE
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: bin/Squirrel/RELEASES
         tag: ${{ github.ref }}
