--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -52,26 +52,13 @@ jobs:
         draft: true
         prerelease: false
         
-    - name: Upload Full Patch
+    - name: Upload Release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: bin/Squirrel/F1Desktop-${{github.ref_name}}-full.nupkg
-
-    - name: Upload Delta Patch
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: bin/Squirrel/F1Desktop-${{github.ref_name}}-delta.nupkg
-
-    - name: Upload Installer
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: bin/Squirrel/F1DesktopSetup.exe
-
-    - name: Upload RELEASE
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: bin/Squirrel/RELEASES
+        file_glob: true
+        file: |
+          bin/Squirrel/F1Desktop-${{github.ref_name}}-full.nupkg
+          bin/Squirrel/F1Desktop-${{github.ref_name}}-delta.nupkg
+          bin/Squirrel/F1DesktopSetup.exe
+          bin/Squirrel/RELEASES
