--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -45,6 +45,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
+        release_name: F1 Desktop v${{github.ref_name}}
         file_glob: true
         file: |
           bin/Squirrel/F1Desktop-${{github.ref_name}}-full.nupkg
