--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -16,12 +16,12 @@
       <PackageReference Include="AdonisUI" Version="1.17.1" />
       <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
       <PackageReference Include="Clowd.Squirrel" Version="3.0.170-unstable-ge14820" />
-      <PackageReference Include="Expression.Blend.Sdk" Version="1.0.2" />
       <PackageReference Include="FamFamFam.Flags.Wpf" Version="1.2.1" />
       <PackageReference Include="FluentScheduler" Version="5.5.1" />
       <PackageReference Include="H.NotifyIcon.Wpf" Version="2.0.58" />
       <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
       <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
+      <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
       <PackageReference Include="Serilog" Version="2.12.0-dev-01494" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
       <PackageReference Include="Stylet" Version="1.3.6" />
