--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Serilog" Version="2.12.0-dev-01494" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
         <PackageReference Include="Stylet" Version="1.3.6" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="System.ServiceModel.Syndication" Version="7.0.0-preview.6.22324.4" />
     </ItemGroup>
 
@@ -43,6 +44,8 @@
         <EmbeddedResource Include="Resources\Data\Credits.json" />
         <None Remove="Resources\Data\RssProviders.json" />
         <EmbeddedResource Include="Resources\Data\RssProviders.json" />
+        <None Remove="Resources\Changelogs\1.0.6.MD" />
+        <EmbeddedResource Include="Resources\Changelogs\1.0.6.MD" />
     </ItemGroup>
 
     <ItemGroup>
