--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         dotnet-version: 6.0.x
     
     - name: Install Squirrel CLI
-      run: dotnet tool install --global csq --version 3.0.170-unstable-ge14820
+      run: dotnet tool install --global csq --version 3.0.203-g4c20e31
         
     - name: Restore Packages
       run: dotnet restore
