--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="Stylet" Version="1.3.6" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="System.ServiceModel.Syndication" Version="7.0.0-preview.6.22324.4" />
+        <PackageReference Include="System.Threading.RateLimiting" Version="7.0.0-preview.7.22375.6" />
     </ItemGroup>
 
     <ItemGroup>
