--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -51,6 +51,8 @@
         <EmbeddedResource Include="Resources\Changelogs\1.1.0.MD" />
         <None Remove="Resources\Changelogs\1.1.1.MD" />
         <EmbeddedResource Include="Resources\Changelogs\1.1.1.MD" />
+        <None Remove="Resources\Changelogs\1.1.2.MD" />
+        <EmbeddedResource Include="Resources\Changelogs\1.1.2.MD" />
     </ItemGroup>
 
     <ItemGroup>
