Reworked settings page to be more expandable...
...added settings for notifications in the process, the global config is getting quite bloated and unwieldy now though so it's time to consider a rewrite.

--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -55,6 +55,8 @@
         <EmbeddedResource Include="Resources\Changelogs\1.1.2.MD" />
         <None Remove="Resources\Changelogs\1.1.3.MD" />
         <EmbeddedResource Include="Resources\Changelogs\1.1.3.MD" />
+        <None Remove="Resources\Changelogs\1.2.0.MD" />
+        <EmbeddedResource Include="Resources\Changelogs\1.2.0.MD" />
     </ItemGroup>
 
     <ItemGroup>
