--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -15,7 +15,7 @@
     <ItemGroup>
         <PackageReference Include="AdonisUI" Version="1.17.1" />
         <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
-        <PackageReference Include="Clowd.Squirrel" Version="3.0.203-g4c20e31" />
+        <PackageReference Include="Clowd.Squirrel" Version="3.0.210-g5f9f594" />
         <PackageReference Include="FamFamFam.Flags.Wpf" Version="1.2.1" />
         <PackageReference Include="FluentScheduler" Version="5.5.1" />
         <PackageReference Include="H.NotifyIcon.Wpf" Version="2.0.58" />
