--- a/F1Desktop.csproj
+++ b/F1Desktop.csproj
@@ -57,6 +57,8 @@
         <EmbeddedResource Include="Resources\Changelogs\1.1.3.MD" />
         <None Remove="Resources\Changelogs\1.2.0.MD" />
         <EmbeddedResource Include="Resources\Changelogs\1.2.0.MD" />
+        <None Remove="Resources\Changelogs\1.2.1.MD" />
+        <EmbeddedResource Include="Resources\Changelogs\1.2.1.MD" />
     </ItemGroup>
 
     <ItemGroup>
